objects/Account_Product_Price__c/Account_Product_Price__c.object-meta.xml
<CustomObject>
    <label>Special Product Pricing</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Account to Product Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Product Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>