objects/Account_Product_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Account_to_Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>