objects/Account_Product_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Price__c</columns>
    <columns>Product__c</columns>
    <columns>CONNECTION_RECEIVED.NAME</columns>
    <columns>CONNECTION_SENT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>